<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:id="@+id/fotositio"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cueva" />

    <TextView
        android:id="@+id/titulositio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulositio"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fotositio"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/tituloplato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloplato"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/titulositio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/nombresitio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefonositio"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tituloplato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintVertical_bias="0.76"
        />

    <TextView
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precioplato"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/nombresitio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintVertical_bias="0.76"
        />




</androidx.constraintlayout.widget.ConstraintLayout>