<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/titulores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulores"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintVertical_bias="0.05"
        />

    <ImageView
        android:id="@+id/fotorestaurante"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/titulores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/restaurante11"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="91dp" />


    <TextView
        android:id="@+id/tituloplato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloplato"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintVertical_bias="0.73"
        />

    <TextView
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precioplato"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintVertical_bias="0.76"
        />



</androidx.constraintlayout.widget.ConstraintLayout>